--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         
         <div id="game"></div>
         <br>
+                <p id="msg"></p>
 
         
         <button class="button" type="submit"  onClick="refreshPage()">Play Again?</button>
