--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
         
         <div id="game"></div>
         <br>
-                <p id="msg"></p>
+         <div class='console-container'><span id='text'></span>
+             <div class='console-underscore' id='console'></div>
+        </div>
 
         
         <button class="button" type="submit"  onClick="refreshPage()">Play Again?</button>
